fix : scrollbar微調整

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -134,7 +134,7 @@ footer {
 
   &::-webkit-scrollbar-thumb {
     background-color: white;
-    border-radius: 0.50rem;
+    border-radius: 0.25rem;
 
     --bg-opacity: 1;
   }
